@@ -25,15 +25,16 @@ import org.apache.lucene.index.PostingsEnum;
 import org.apache.lucene.index.Term;
 import org.apache.lucene.index.Terms;
 import org.apache.lucene.index.TermsEnum;
-import org.apache.lucene.search.DocIdSetIterator;
 import org.apache.lucene.search.Explanation;
-import org.apache.lucene.search.ImpactsDISI;
 import org.apache.lucene.search.IndexSearcher;
+import org.apache.lucene.search.LeafSimScorer;
 import org.apache.lucene.search.Query;
 import org.apache.lucene.search.QueryVisitor;
 import org.apache.lucene.search.ScoreMode;
 import org.apache.lucene.search.Scorer;
+import org.apache.lucene.search.ScorerSupplier;
 import org.apache.lucene.search.TermQuery;
+import org.apache.lucene.search.TermScorer;
 import org.apache.lucene.search.Weight;
 import org.apache.lucene.search.similarities.Similarity.SimScorer;
 import org.apache.lucene.util.BytesRef;
@@ -118,49 +119,47 @@ final class FeatureQuery extends Query {
       }
 
       @Override
-      public Scorer scorer(LeafReaderContext context) throws IOException {
+      public ScorerSupplier scorerSupplier(LeafReaderContext context) throws IOException {
+        final Weight thisWeight = this;
         Terms terms = Terms.getTerms(context.reader(), fieldName);
         TermsEnum termsEnum = terms.iterator();
         if (termsEnum.seekExact(new BytesRef(featureName)) == false) {
           return null;
         }
+        final int docFreq = termsEnum.docFreq();
 
-        final SimScorer scorer = function.scorer(boost);
-        final ImpactsEnum impacts = termsEnum.impacts(PostingsEnum.FREQS);
-        final ImpactsDISI impactsDisi = new ImpactsDISI(impacts, impacts, scorer);
+        return new ScorerSupplier() {
 
-        return new Scorer(this) {
+          private boolean topLevelScoringClause = false;
 
           @Override
-          public int docID() {
-            return impacts.docID();
+          public Scorer get(long leadCost) throws IOException {
+            final SimScorer scorer = function.scorer(boost);
+            final LeafSimScorer simScorer =
+                new LeafSimScorer(scorer, context.reader(), fieldName, topLevelScoringClause);
+            final ImpactsEnum impacts = termsEnum.impacts(PostingsEnum.FREQS);
+            return new TermScorer(thisWeight, impacts, simScorer);
           }
 
           @Override
-          public float score() throws IOException {
-            return scorer.score(impacts.freq(), 1L);
+          public long cost() {
+            return docFreq;
           }
 
           @Override
-          public DocIdSetIterator iterator() {
-            return impactsDisi;
-          }
-
-          @Override
-          public int advanceShallow(int target) throws IOException {
-            return impactsDisi.advanceShallow(target);
-          }
-
-          @Override
-          public float getMaxScore(int upTo) throws IOException {
-            return impactsDisi.getMaxScore(upTo);
-          }
-
-          @Override
-          public void setMinCompetitiveScore(float minScore) {
-            impactsDisi.setMinCompetitiveScore(minScore);
+          public void setTopLevelScoringClause() throws IOException {
+            topLevelScoringClause = true;
           }
         };
+      }
+
+      @Override
+      public Scorer scorer(LeafReaderContext context) throws IOException {
+        ScorerSupplier supplier = scorerSupplier(context);
+        if (supplier == null) {
+          return null;
+        }
+        return supplier.get(Long.MAX_VALUE);
       }
     };
   }
