@@ -31,7 +31,7 @@ import org.apache.lucene.util.ArrayUtil;
  *
  * @lucene.internal
  */
-final class MaxScoreCache {
+public final class MaxScoreCache {
 
   private final ImpactsSource impactsSource;
   private final SimScorer scorer;
@@ -77,7 +77,12 @@ final class MaxScoreCache {
     return maxScore;
   }
 
-  float getMaxScore(int upTo) throws IOException {
+  /**
+   * Return the maximum score up to upTo included.
+   *
+   * @see Scorer#getMaxScore(int)
+   */
+  public float getMaxScore(int upTo) throws IOException {
     final int level = getLevel(upTo);
     if (level == -1) {
       return globalMaxScore;
