@@ -182,6 +182,8 @@ Optimizations
 
 * GITHUB#12415: Optimized counts on disjunctive queries. (Adrien Grand)
 
+* GITHUB#12490: Faster computation of top-k hits on boolean queries. (Adrien Grand)
+
 Bug Fixes
 ---------------------
 
